--- a/package.json
+++ b/package.json
@@ -18,9 +18,5 @@
     "pino": "^7.4.1",
     "queue-promise": "^2.2.1"
   },
-  "devDependencies": {
-    "ts-node": "^10.4.0",
-    "tslint": "^6.1.3",
-    "typescript": "^4.5.2"
-  }
+  "devDependencies": {}
 }
