--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
     {
       "type": "pwa-node",
       "request": "launch",
-      "name": "Launch Program",
+      "name": "Launch",
       "skipFiles": [
         "<node_internals>/**"
       ],
@@ -15,15 +15,6 @@
       "env": {
         "DEBUG": "minecraft-protocol"
       }
-    }, {
-      "name": "Current TS File",
-      "type": "node",
-      "request": "launch",
-      "args": ["${workspaceFolder}\\src\\app.ts"],
-      "runtimeArgs": ["--nolazy", "-r", "ts-node/register"],
-      "sourceMaps": true,
-      "cwd": "${workspaceRoot}",
-      "protocol": "inspector",
     }
   ]
 }
