--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compose": "docker-compose up -d",
-    "start": "ts-node ./src/app.ts"
+    "start": "node ./src/app.ts"
   },
   "author": "",
   "license": "ISC",
