--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "minecraft-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compose": "docker-compose up -d",
-    "start": "node ./src/app.ts"
+    "start": "node ./src/app.js"
   },
   "author": "",
   "license": "ISC",
