--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mineflayer-pathfinder": "^1.8.0",
     "mineflayer-web-inventory": "^1.6.3",
     "pino": "^7.4.1",
+    "prismarine-viewer": "^1.21.0",
     "queue-promise": "^2.2.1"
   },
   "devDependencies": {
